--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: ruby
-script: 'bundle exec rake'
+script: bundle exec rake
 rvm:
-  - 2.2.3
-  - 2.3.1
-  - ruby-head
-  - jruby-head
-
+- 2.2.3
+- 2.3.1
+- ruby-head
+- jruby-head
 matrix:
   allow_failures:
-    - rvm: jruby-head
-    - rvm: ruby-head
-# Put this in your .travis.yml
+  - rvm: jruby-head
+  - rvm: ruby-head
 gemfile:
-  - gemfiles/rack_2.gemfile
-  - gemfiles/rack_1.gemfile
+- gemfiles/rack_2.gemfile
+- gemfiles/rack_1.gemfile
+deploy:
+  provider: rubygems
+  api_key:
+    secure: VTosVmCdLWUGK8KyzovYri7ySfd7fACtfL8MClEBBHnI+m2cLCpmtCJ7Z1X7z9BXlj974EDaF8V9iRKzfksXIf8aaPfVQw9AW94fLJZbfSB8YGOGyNbPu9YECoZQB1aZ2lw9s/aEdfwCbmqizO/fYpG3YoPKJdm1ZJpNOFR37Xk=
+  gem: redis-rack
+  on:
+    tags: true
+    repo: redis-store/redis-rack
