Run CI with Truffleruby

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           - "3.2"
           - "3.3"
           - "jruby"
+          - "truffleruby"
 
     steps:
       - uses: actions/checkout@v4
