--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,11 @@ jobs:
           - "3.1"
           - "3.2"
           - "3.3"
+          - "head"
           - "jruby"
+          - "jruby-head"
           - "truffleruby"
+          - "truffleruby-head"
 
     steps:
       - uses: actions/checkout@v4
